# flax-sentence-embeddings

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
code-search-net/: readme.md  requirements.txt  train_code_search_net.py
conversational-model/: multi_context_train.py
dataset/: dataset.py  datasets_list.tsv  download_data.py
datasets/stackexchange/: convert.py  convert_archives.py  convert_title_body.py  download_archive.py  download_archive_file_list.tsv  parser.py  transforms.py
demo/: README.md
demo/backend/: config.py  inference.py  main.py
demo/frontend/: streamlit_code.py
evaluation/: metrics.py
examples/: README.md
examples/embedding-benchmark/: compare_embeddings.py  run_jax_model.py  run_pytorch_model.py
examples/embedding-benchmark/seb/: Evaluation.py  __init__.py
examples/embedding-benchmark/seb/tasks/: AbsTask.py  __init__.py
examples/embedding-benchmark/seb/tasks/BinaryClassification/: AbsBinaryClassificationTask.py  SprintDuplicateQuestions.py  TwitterSemEval2015.py  TwitterURLCorpus.py  __init__.py
examples/embedding-benchmark/seb/tasks/Clustering/: AbsClusteringTask.py  RedditClustering.py  StackExchangeClustering.py  TwentyNewsgroupsClustering.py  (+1 more)
examples/nils_flax_script/: MultiDatasetDataLoader.py  convert_to_pytorch.py  train.py
examples/pytorch_train_script/: MultiDatasetDataLoader.py  training.py
tests/: test_loss.py  test_lr.py  test_ops.py
torch_impl/: MultipleNegativeRankingLoss.py  util.py
trainer/: train.py
trainer/loss/: basic.py  custom.py
trainer/utils/: ops.py  scheduler.py
(+20 files in other folders)
